Closed Bug 167510 Opened 23 years ago Closed 23 years ago

Impossible to unbold selection, CSS mode

Categories

(Core :: DOM: Editor, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: glazou, Assigned: glazou)

Details

Attachments

(1 file)

1. launch Composer, in CSS mode 2. type one char 3. click on B button 4. type one char 5. click on B button 5. type one char 6. select the 3 chars 7. click on the B button, that should bolden all the selection 8. click again on the B button Expected result : unbolds the selection Actual result : does nothing
Here is the resulting html source (steps 1-5): <span style="font-weight: bold;">a</span><span style="font-weight: bold;">b</span><span style="font-weight: bold;">c</span> I expect to see: <span style="font-weight: bold;">abc</span> Is the lack of consolidation/coalescing covered in this bug or should I file a new one for that issue?
comment 1 appears to be covered by a different bug (on jfrancis' plate)
Comment on attachment 98471 [details] [diff] [review] first try ;-) r=brade Do we need an assertion for aValueString in GetCSSEquivalentToHTMLInlineStyleSet?
Attachment #98471 - Flags: review+
Comment on attachment 98471 [details] [diff] [review] first try ;-) sr=bzbarsky
Attachment #98471 - Flags: superreview+
Comment on attachment 98471 [details] [diff] [review] first try ;-) a=asa (on behalf of drivers) for checkin to 1.2a. (land quickly or miss the boat. we're down to the wire)
Attachment #98471 - Flags: approval+
*sigh*... too late
Status: NEW → ASSIGNED
checked in trunk
Status: ASSIGNED → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: