in some cases, it was impossible to unbold selection in CSS mode, b=167510, r=brade, sr=bzbarsky